[package]
name = "commits-on-master-bot"
version = "0.1.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow     = "1"
chrono     = "0.4"
config     = "0.10"
elefren    = "0.22"
env_logger = "0.8"
getset     = "0.1"
git2       = "0.13"
log        = "0.4"
serde      = "1"
structopt  = "0.3"
toml       = "0.5"
handlebars = "3.5"
